# CUDA_gpca_proj2

./: .gitignore  README.md
src/: .devnotes  .gitignore  CMakeLists.txt  main.cpp
src/common/: allocators.hpp  data.hpp  defines.hpp  fast_allocators.hpp  global_conf.hpp  thread_pool.hpp
src/cpu/: allocators.hpp  arg_parser.hpp  data.hpp  data_parser.hpp  dispatcher.hpp  generator.hpp  global_conf.hpp  hamming.hpp  runner.hpp  tester.hpp  trie.hpp
src/cuda_lib/: allocators.cuh  cuda_tests.cuh  cuda_trie.cuh  data.cuh  defines.cuh  global_conf.cuh  hamming.cuh  test.cuh  thread_mgr.cuh
src/src/: allocators.cu  arg_parser.cpp  cuda_tests.cu  cuda_trie.cu  data.cu  data_parser.cpp  dispatcher.cpp  generator.cpp  global_conf.cpp  global_conf.cu  hamming.cpp  hamming.cu  helpers.cu  runner.cpp  test.cu  tester.cpp  thread_mgr.cu  thread_pool.cpp  trie.cpp
